A small for getFirst method not available in Java